--- a/src/components/TabContent/SectionAbout.less
+++ b/src/components/TabContent/SectionAbout.less
@@ -12,11 +12,13 @@
 
 .tab-content  {
 	.member-card-container{
+		display: flex;
 		flex-direction: row;
 		justify-content: space-around;
 		align-items: center;
 		flex-wrap: wrap;
 		padding-bottom: 20px;
+
 		@media screen and (min-width: 400px) {
 			padding-top:1em;
 		}
@@ -60,7 +62,7 @@
 				color: white;
 				font-weight: bold;
 				background : linear-gradient(82deg, rgba(#5574F7, 0.7), rgba(#60C3FF, 0.7) );
-				padding:4px 14px;
+				padding:4px 8px;
 				border-radius: 2px;
 				font-size: 12px;
 			}
